--- a/index.html
+++ b/index.html
@@ -1,26 +1,35 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Easier-Layout.png</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
 
-    </head>
+<head>
+    <title>Easier-Layout.png</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 
-    <body>
-        <header>header</header>
-        <nav>nav</nav>
+</head>
 
-       <section id="left">
+<body>
+    <header>header</header>
+
+    <nav>nav</nav>
+
+    <section class="split-box">
+
+        <section id="left">
             section
             <div id="div0">article
-                    <h4>h1, h2, h3</h4>
-                    <p>p</p>
+                <h4>h1, h2, h3</h4>
+                <p>p</p>
             </div>
         </section>
 
-        <section id="right">aside</section>
-        <footer>footer</footer>
+        <section id="right">
+            aside
+        </section>
 
-    </body>
+    </section>
+
+    <footer>footer</footer>
+
+</body>
 
 </html>
